# student

./: .gitignore  1.json  CMakeLists.txt  RCa17412  RCa30096  README.md  icon.rc  login.json  main.cpp  main.h  resource.h  text.json
enc_temp_folder/daca2fb4e819445d76b91839348ec/: home.tsx
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  interface.tsx  main.tsx  window.d.ts
frontend/src/components/: a.tsx  inupt.tsx  search.tsx  select.css  select.tsx  showTable.tsx  showTest.css  table.css  table.tsx  textarea.tsx
frontend/src/hooks/: State.tsx  readNote.js  selfNote.js  writeNotes.js
frontend/src/pages/: DeleteModal.tsx  changeDetali.tsx  createTest.tsx  detail.tsx  home.tsx  login.tsx  searchResult.tsx  showTest.tsx
frontend/src/pages/styles/: chageText.css  del.css  detail.css  home.css  login.css  searchResult.css  showTest.css
